--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     const subject = `Contact from ${name}`;
     const body = `Name: ${name}\nEmail: ${email}\n\nMessage:${message}`;
     
-    window.location.href = `mailto:agungofficialdev@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+    window.location.href = `mailto:rafie110504@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
   });
 </script>
     
